--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,9 @@
 	<classpathentry kind="lib" path="/Users/arciak/Downloads/jcalendar-1/lib/jgoodies-common-1.2.0.jar"/>
 	<classpathentry kind="lib" path="/Users/arciak/Downloads/jcalendar-1/lib/jgoodies-looks-2.4.1.jar"/>
 	<classpathentry kind="lib" path="/Users/arciak/Downloads/jcalendar-1/lib/junit-4.6.jar"/>
+	<classpathentry kind="lib" path="/Users/arciak/Downloads/DatePicker-V0.99-2006.09.01.jar"/>
+	<classpathentry kind="lib" path="/Users/arciak/Downloads/javafx-ui-controls.jar"/>
+	<classpathentry kind="lib" path="/Users/arciak/Downloads/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="/Users/arciak/Downloads/swingx-0.9.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
