--- a/.classpath
+++ b/.classpath
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/Users/arciak/Downloads/jcalendar-1/lib/jcalendar-1.4.jar"/>
-	<classpathentry kind="lib" path="/Users/arciak/Downloads/jcalendar-1/lib/jgoodies-common-1.2.0.jar"/>
-	<classpathentry kind="lib" path="/Users/arciak/Downloads/jcalendar-1/lib/jgoodies-looks-2.4.1.jar"/>
-	<classpathentry kind="lib" path="/Users/arciak/Downloads/jcalendar-1/lib/junit-4.6.jar"/>
-	<classpathentry kind="lib" path="/Users/arciak/Downloads/DatePicker-V0.99-2006.09.01.jar"/>
-	<classpathentry kind="lib" path="/Users/arciak/Downloads/javafx-ui-controls.jar"/>
-	<classpathentry kind="lib" path="/Users/arciak/Downloads/jdatepicker-1.3.4.jar"/>
-	<classpathentry kind="lib" path="/Users/arciak/Downloads/swingx-0.9.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/git/osm19l_projekt1/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/git/osm19l_projekt1/swingx-action-1.6.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/git/osm19l_projekt1/swingx-autocomplete-1.6.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/git/osm19l_projekt1/swingx-common-1.6.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/git/osm19l_projekt1/swingx-core-1.6.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/git/osm19l_projekt1/swingx-graphics-1.6.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/git/osm19l_projekt1/swingx-painters-1.6.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/git/osm19l_projekt1/swingx-plaf-1.6.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
